# fly_telegram_bot

./: .env  README.md  app.py  config.py  db.py  get_aerolineas_token.py  performance_monitor.py  requirements.txt  stats.py  telegram_utils.py
.github/workflows/: run.yml
mcp-client/: mcp_flight_server.py  pyproject.toml  simple_test.py  test_mcp_tools.py
search_providers/: __init__.py  aerolineas.py  amadeus.py  base_provider.py  level.py  skyscanner.py
