[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.57.1",
    "blinker>=1.7.0,<1.8",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.11.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.2",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "selenium>=4.34.2",
    "selenium-wire>=5.1.0",
    "setuptools>=80.9.0",
]
